# university_points-bot

./: README.md  config.py  create_bot.py  keyboards.py  main.py  pyproject.toml
functions/: __init__.py  db_connector.py  db_queries.py  delay.py  scraping.py
handlers/: __init__.py  points.py  registration.py
